# aoc2021-rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  setup.rs
src/solutions/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
