[package]
name = "aoc2021-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
reqwest = {version="0.11.7", features = ["blocking", "cookies"]}
smallvec = "1.7.0"
structopt = "0.3.25"
